--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<!--nav-bar-->
 <div class="container-fluid fixed-top">
     <nav class="navbar navbar-light" style="background-color: #ffffff; height: 115px">
         <figure id="logo" class="navbar-brand" style="margin-left: 150px">
@@ -16,29 +17,21 @@
                      class="img-responsive" width="160px" height="100px"></a>
         </figure>
         <ul class="nav nav-pills">
-            <li class="nav-item dropdown">
+            <li class="nav-item dropdown" style="margin-right: 40px">
                 <a class="nav-link dropdown-toggle btn btn-outline-success" data-toggle="dropdown" href="#"
-                   role="button" aria-haspopup="true" aria-expanded="false">Dành cho chủ nhà</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                   aria-expanded="false">Ngôn ngữ</a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#one">VI</a>
-                    <a class="dropdown-item" href="#two">EN</a>
+                   role="button" aria-haspopup="true" aria-expanded="false">Tài khoản </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Đăng nhập </a>
+                    <a class="dropdown-item" href="#">Đăng ký </a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Cập nhật tài khoản </a>
+                    <a class="dropdown-item" href="#">Thây đổi mật khẩu </a>
                 </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                   aria-expanded="false">Đăng Nhập </a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                   aria-expanded="false">Đăng ký</a>
             </li>
         </ul>
     </nav>
 </div>
+<!--end/nav-bar-->
 <div id="details" class="container-fluid">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
