--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <!--nav-bar-->
+<!--nav-bar-->
 <div class="container-fluid fixed-top">
     <nav class="navbar navbar-light" style="background-color: gainsboro; height: 115px">
         <figure id="logo" class="navbar-brand" style="margin-left: 150px">
@@ -17,25 +18,21 @@
                      class="img-responsive" width="160px" height="100px"></a>
         </figure>
         <ul class="nav nav-pills">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                   aria-expanded="false">Ngôn ngữ</a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#one">VI</a>
-                    <a class="dropdown-item" href="#two">EN</a>
+            <li class="nav-item dropdown" style="margin-right: 40px">
+                <a class="nav-link dropdown-toggle btn btn-outline-success" data-toggle="dropdown" href="#"
+                   role="button" aria-haspopup="true" aria-expanded="false">Tài khoản </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Đăng nhập </a>
+                    <a class="dropdown-item" href="#">Đăng ký </a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Cập nhật tài khoản </a>
+                    <a class="dropdown-item" href="#">Thây đổi mật khẩu </a>
                 </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                   aria-expanded="false">Đăng Nhập </a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-                   aria-expanded="false">Đăng ký</a>
             </li>
         </ul>
     </nav>
 </div>
+<!--end/nav-bar-->
 
 <div class="container" style="margin-top: 150px; margin-bottom: 35px">
     <div class="row">
@@ -43,7 +40,7 @@
 
             <h3 style="text-align: center; font-size: 38px">{{house.title}}</h3>
             <h4>Giá</h4>
-            <p>
+            <p style="color: red">
                 {{house.price.toLocaleString() + 'VND'}}
             </p>
             <h4>Trạng thái</h4>
@@ -63,7 +60,6 @@
                 <div class="box-txt"><p>{{house.description}}</p></div>
             </div>
         </div>
-
 
 
         <div class="col-4" style="margin-top: 20px; margin-bottom: 20px">
@@ -120,11 +116,12 @@
     </div>
 
 </div>
-<!--Footer-->
-<div>
-    <!-- Footer -->
-    <footer class="page-footer font-small unique-color-dark">
 
+<!--Footer-->
+<!-- Footer -->
+
+<div>
+    <footer class="page-footer font-small unique-color-dark">
         <div style="background-color: #6351ce;">
             <div class="container">
 
@@ -150,99 +147,80 @@
                     </div>
                 </div>
             </div>
-            <!-- Grid column -->
         </div>
 
-
-        <!-- Footer Links -->
-        <div class="container text-center text-md-left mt-5">
-
-
-            <!-- Grid row -->
-            <div class="row mt-3">
-
-                <div class="section col-md-4">
-                    <a class="td-header-logo td-sticky-disable" href="https://coinvn247.com/">
-                        <img class="td-retina-data"
-
-                             src="https://coinvn247.com/wp-content/uploads/2019/01/homecodegum.png" height="150px"
-                             width="265px" alt="">
-                    </a>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-1">
+                    <!--1-->
                 </div>
+                <div class="col-10">
+                    <div class="row" style="margin-top: 30px">
+                        <div class="col-3">
+                            <div class="section col-md-4">
+                                <a [routerLink]="['/house']">
+                                    <img src="https://coinvn247.com/wp-content/uploads/2019/01/codegym.png"
+                                         alt="HomeCodeGym"
+                                         class="img-responsive" width="265px" height="150px"></a>
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <h6 class="text-uppercase font-weight-bold">Hỗ trợ</h6>
+                            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                            <p>
+                                <a href="#!">Câu hỏi thường </a>
+                            </p>
+                            <p>
+                                <a href="#!">Chính sách hủy</a>
+                            </p>
+                            <p>
+                                <a href="#!">Hướng dẫn đặt phòng</a>
+                            </p>
 
-                <!-- Grid column -->
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        </div>
+                        <div class="col-3">
+                            <h6 class="text-uppercase font-weight-bold">Cẩm nang du lịch </h6>
+                            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                            <p>
+                                <a href="#!">Đà Lạt </a>
+                            </p>
+                            <p>
+                                <a href="#!">Đà Nẵng </a>
+                            </p>
+                            <p>
+                                <a href="#!">SaPa </a>
+                            </p>
 
-                    <!-- Links -->
-                    <h6 class="text-uppercase font-weight-bold">Hỗ trợ</h6>
-                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                    <p>
-                        <a href="#!">Câu hỏi thường </a>
-                    </p>
-                    <p>
-                        <a href="#!">Chính sách hủy</a>
-                    </p>
-                    <p>
-                        <a href="#!">Hướng dẫn đặt phòng</a>
-                    </p>
+                        </div>
+                        <div class="col-3">
+                            <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                            <p>
+                                <i class="fas fa-home mr-3"></i> CodeGym, My Dinh, Ha Noi </p>
+                            <p>
+                                <i class="fas fa-envelope mr-3"></i> codegym@gmail.com</p>
+                            <p>
+                                <i class="fas fa-phone mr-3"></i> + 08 234 567 88</p>
+                            <p>
+                                <i class="fas fa-print mr-3"></i> + 08 234 567 89</p>
 
+                        </div>
+
+                    </div>
+                    <div class="col-1">
+                        <!--1-->
+                    </div>
                 </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-
-                    <!-- Links -->
-                    <h6 class="text-uppercase font-weight-bold">Cẩm nang du lịch </h6>
-                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                    <p>
-                        <a href="#!">Đà Lạt </a>
-                    </p>
-                    <p>
-                        <a href="#!">Đà Nẵng </a>
-                    </p>
-                    <p>
-                        <a href="#!">SaPa </a>
-                    </p>
-
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-
-                    <!-- Links -->
-                    <h6 class="text-uppercase font-weight-bold">Contact</h6>
-                    <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                    <p>
-                        <i class="fas fa-home mr-3"></i> CodeGym, Mỹ Đình, Hà Nội</p>
-                    <p>
-                        <i class="fas fa-envelope mr-3"></i> codegym@gmail.com</p>
-                    <p>
-                        <i class="fas fa-phone mr-3"></i> + 08 234 567 88</p>
-                    <p>
-                        <i class="fas fa-print mr-3"></i> + 08 234 567 89</p>
-
-                </div>
-
-                <!-- Grid column -->
-
             </div>
-            <!-- Grid row -->
-
         </div>
-        <!-- Footer Links -->
-
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">© 2019 Copyright:
             <a href="#!">Bản quyền thuộc về Team CC </a>
         </div>
         <!-- Copyright -->
-
     </footer>
-    <!-- Footer -->
 </div>
-
+<!--footer-->
 
 </body>
 </html>
