--- a/src/app/view-detail/view-detail.component.css
+++ b/src/app/view-detail/view-detail.component.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css?family=Lobster");
+.title {
+    font-family: 'Lobster';
+}
+
 .box-Highlights {
     border-radius: 4px;
     background-color: #fffbfa;
