show image detail

--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -55,7 +55,7 @@
             </p>
             <h4>Ảnh</h4>
             <p>
-                <img src="http://127.0.0.1:8000/storage/{{house.image}}" height="400px" width="700px">
+                <img src="http://127.0.0.1:8000/storage/{{house.image[0]}}" height="400px" width="700px">
             </p>
             <div class="box-Highlights">
                 <div class="tlt"><h4>Điểm nổi bật của chỗ ở</h4></div>
