--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -69,7 +69,7 @@
                         <div class="col-6">
                             <h4>Ảnh</h4>
                             <p>
-                                <img src="http://127.0.0.1:8000/storage/{{house.image}}" height="400px" width="565px">
+                                <img src="http://127.0.0.1:8000/storage/{{house.image[0]}}" height="400px" width="565px">
                             </p>
                         </div>
                         <div class="col-6">
