--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -63,29 +63,31 @@
                     <!--#------------------------------------->
 
 
-                    <h3 style="text-align: center;margin-top: 20px; font-size: 38px">{{house.title}}</h3>
+                    <h3 class="title" style="text-align: center;margin-top: 20px; font-size: 38px">{{house.title}}</h3>
 
                     <div class="row">
                         <div class="col-6">
                             <h4>Ảnh</h4>
                             <p>
-                                <img src="http://127.0.0.1:8000/storage/{{house.image[0]}}" height="400px" width="565px">
+                                <img src="http://127.0.0.1:8000/storage/{{house.image[0]}}" height="400px"
+                                     width="420px">
                             </p>
                         </div>
                         <div class="col-6">
-
-                            <h4>Giá</h4>
-                            <p style="color: red">
-                                {{house.price.toLocaleString() + 'VND'}}
-                            </p>
-                            <h4>Trạng thái</h4>
-                            <p>
-                                {{house.status}}
-                            </p>
-                            <h4>Địa chỉ</h4>
-                            <p>
-                                {{house.address}}
-                            </p>
+                            <div style="margin-left: 25px">
+                                <h4>Giá</h4>
+                                <p style="color: red">
+                                    {{house.price.toLocaleString() + 'VND'}}
+                                </p>
+                                <h4>Trạng thái</h4>
+                                <p>
+                                    {{house.status}}
+                                </p>
+                                <h4>Địa chỉ</h4>
+                                <p>
+                                    {{house.address}}
+                                </p>
+                            </div>
                             <div id="map">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3723.9265632499687!2d105.76612145093053!3d21.035624192850133!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x313454b9444c676b%3A0xe713200541b7456d!2sCodeGym!5e0!3m2!1svi!2s!4v1547546252956"
                                         width="540" height="200" frameborder="0" style="border:0"
