--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-light" style="background-color: #ffff; height: 115px">
 
         <figure id="logo" class="navbar-brand" style="margin-left: 150px">
-            <a [routerLink]="['/house']">
+            <a [routerLink]="['/']">
                 <img src="https://coinvn247.com/wp-content/uploads/2019/01/codegym.png" alt="HomeCodeGym"
                      class="img-responsive" width="160px" height="100px"></a>
         </figure>
