save order to database

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<app-booking-home3></app-booking-home3>-->
-<!--<app-customer></app-customer>-->
+<!--<app-home></app-home>-->
 
 <!--<app-view-detail></app-view-detail>-->
 <router-outlet></router-outlet>
