--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-light" style="background-color: #ffff; height: 115px">
 
         <figure id="logo" class="navbar-brand" style="margin-left: 150px">
-            <a [routerLink]="['/']">
+            <a href="/">
                 <img src="https://coinvn247.com/wp-content/uploads/2019/01/codegym.png" alt="HomeCodeGym"
                      class="img-responsive" width="160px" height="100px"></a>
         </figure>
@@ -63,13 +63,13 @@
                     <!--#------------------------------------->
 
 
-                    <h3 class="title" style="text-align: center;margin-top: 20px; font-size: 38px">{{house.title}}</h3>
+                    <h3 class="title" style="text-align: center;margin-top: 20px; font-size: 38px">{{house?.title}}</h3>
 
                     <div class="row">
                         <div class="col-6">
                             <h4>Ảnh</h4>
                             <p>
-                                <img src="http://127.0.0.1:8000/storage/{{house.image[0]}}" height="400px"
+                                <img src="http://127.0.0.1:8000/storage/{{house?.image[0]}}" height="400px"
                                      width="420px">
                             </p>
                         </div>
@@ -77,15 +77,15 @@
                             <div style="margin-left: 25px">
                                 <h4>Giá</h4>
                                 <p style="color: red">
-                                    {{house.price.toLocaleString() + 'VND'}}
+                                    {{house?.price.toLocaleString() + 'VND'}}
                                 </p>
                                 <h4>Trạng thái</h4>
                                 <p>
-                                    {{house.status}}
+                                    {{house?.status}}
                                 </p>
                                 <h4>Địa chỉ</h4>
                                 <p>
-                                    {{house.address}}
+                                    {{house?.address}}
                                 </p>
                             </div>
                             <div id="map">
@@ -96,7 +96,7 @@
                         </div>
                         <div class="box-Highlights">
                             <div class="tlt"><h4>Điểm nổi bật của chỗ ở</h4></div>
-                            <div class="box-txt"><p>{{house.description}}</p></div>
+                            <div class="box-txt"><p>{{house?.description}}</p></div>
                         </div>
                     </div>
 
@@ -115,48 +115,38 @@
                         <div class="card-header">
                             0 Đồng
                         </div>
-                        <form class="container">
-                            <div class="form-group">
-                                <div class="form-row" style="margin-top: 15px">
-                                    <div class="form-group col-md-6">
-                                        <label>NGÀY ĐẾN </label>
-                                        <input type="date" class="form-control">
-                                    </div>
-
-                                    <div class="form-group col-md-6">
-                                        <label>NGÀY ĐI </label>
-                                        <input type="date" class="form-control">
+                        <div class="container">
+                            <form (ngSubmit)="onSubmit($event)" [formGroup]="addOrderForm">
+                                <div class="form-group">
+                                    <div class="form-row" style="margin-top: 15px">
+                                        <div class="form-group col-md-6">
+                                            <label>NGÀY ĐẾN </label>
+                                            <input type="date" class="form-control" id="checkIn" name="checkIn"
+                                                   formControlName="checkIn">
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <label>NGÀY ĐI </label>
+                                            <input type="date" class="form-control" id="checkOut" name="checkOut"
+                                                   formControlName="checkOut">
+                                        </div>
                                     </div>
                                 </div>
-
-                                <div style="margin-bottom: 15px">
-                                    <h6>SỐ KHÁCH </h6>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Tổng: 0 usd</li>
+                                </ul>
+                                <div style="margin-left: 120px; margin-top: 20px; margin-bottom: 20px">
+                                    <button type="submit" class="btn btn-danger">Đặt ngay</button>
                                 </div>
-
-                                <select class="form-control form-control-lg">
-                                    <option>1 Khách</option>
-                                    <option>2 Khách</option>
-                                    <option>3 Khách</option>
-                                    <option>4 Khách</option>
-                                </select>
-
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">Tổng: 0 usd</li>
-
-                            </ul>
-                            <div style="margin-left: 120px; margin-top: 20px; margin-bottom: 20px">
-                                <button type="submit" class="btn btn-danger">Đặt ngay</button>
-                            </div>
-                            <p class="m-0"><i class="iconroom-phone-line" aria-hidden="true"></i> Gọi <a
-                                    href="tel:0983692323"><b>0983692323</b></a>
-                                để được hỗ trợ 24/7 </p>
-                            <p style="margin-top: 20px"><i class="iconroom-shape" aria-hidden="true"></i> Nhắn tin <a
-                                    target="_blank"
-                                    href="https://www.facebook.com/messages/t/2415471875161293"><b>homeCodegym</b></a>
-                                để được hỗ trợ 24/7 </p>
-
-                        </form>
+                                <p class="m-0"><i class="iconroom-phone-line" aria-hidden="true"></i> Gọi <a
+                                        href="tel:0983692323"><b>0983692323</b></a>
+                                    để được hỗ trợ 24/7 </p>
+                                <p style="margin-top: 20px"><i class="iconroom-shape" aria-hidden="true"></i> Nhắn tin
+                                    <a
+                                            target="_blank"
+                                            href="https://www.facebook.com/messages/t/2415471875161293"><b>homeCodegym</b></a>
+                                    để được hỗ trợ 24/7 </p>
+                            </form>
+                        </div>
 
                     </div>
                     <div class="p-3 mb-2 bg-info text-white" style="margin-top: 10px">
