--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-light" style="background-color: #ffff; height: 115px">
 
         <figure id="logo" class="navbar-brand" style="margin-left: 150px">
-            <a href="/">
+            <a [routerLink]="['/']">
                 <img src="https://coinvn247.com/wp-content/uploads/2019/01/codegym.png" alt="HomeCodeGym"
                      class="img-responsive" width="160px" height="100px"></a>
         </figure>
@@ -77,7 +77,7 @@
                             <div style="margin-left: 25px">
                                 <h4>Giá</h4>
                                 <p style="color: red">
-                                    {{house?.price.toLocaleString() + 'VND'}}
+                                    {{house?.price.toLocaleString() + 'VND ngày/đêm'}}
                                 </p>
                                 <h4>Trạng thái</h4>
                                 <p>
@@ -105,31 +105,33 @@
 
                 <!--row2-->
                 <div class="col-3" style="margin-top: 20px; margin-bottom: 20px">
-                    <div>
-                        <div class="p-3 mb-2 bg-light text-dark" style="margin-top: 10px">
-                            Bạn thích chỗ nghỉ này, nhưng vẫn chưa chắc chắn?
-                            <button type="button" class="btn btn-primary btn-lg btn-block">Xem các nhà tương tự</button>
-                        </div>
-                    </div>
+                    <!--<div>-->
+                    <!--<div class="p-3 mb-2 bg-light text-dark" style="margin-top: 10px">-->
+                    <!--Bạn thích chỗ nghỉ này, nhưng vẫn chưa chắc chắn?-->
+                    <!--<button type="button" class="btn btn-primary btn-lg btn-block">Xem các nhà tương tự</button>-->
+                    <!--</div>-->
+                    <!--</div>-->
                     <div class="card sticky-top">
                         <div class="card-header">
-                            0 Đồng
+                            {{house?.price.toLocaleString() + 'VND ngày/đêm'}}
                         </div>
                         <div class="container">
-                            <form (ngSubmit)="onSubmit($event)" [formGroup]="addOrderForm">
+                            <form (ngSubmit)="onSubmit()" [formGroup]="addOrderForm">
                                 <div class="form-group">
                                     <div class="form-row" style="margin-top: 15px">
                                         <div class="form-group col-md-6">
                                             <label>NGÀY ĐẾN </label>
-                                            <input type="date" class="form-control" id="checkIn" name="checkIn"
+                                            <input type="date" class="form-control" name="checkIn"
                                                    formControlName="checkIn">
                                         </div>
                                         <div class="form-group col-md-6">
                                             <label>NGÀY ĐI </label>
-                                            <input type="date" class="form-control" id="checkOut" name="checkOut"
+                                            <input type="date" class="form-control" name="checkOut"
                                                    formControlName="checkOut">
                                         </div>
                                     </div>
+                                    <input type="hidden" name="house_id" formControlName="house_id"
+                                           [(ngModel)]="house.id">
                                 </div>
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">Tổng: 0 usd</li>
@@ -149,15 +151,15 @@
                         </div>
 
                     </div>
-                    <div class="p-3 mb-2 bg-info text-white" style="margin-top: 10px">
-                        <h4>Đăng ký nhận tin khuyến mãi từ HomeCodeGym </h4>
-                        <p>Đăng ký để nhận ưu đãi qua email, với mức giảm giá đến 70%.</p>
-                        <div class="form-group">
-                            <input type="email" class="form-control"
-                                   placeholder="name@example.com">
-                        </div>
-                        <button type="button" class="btn btn-light" style="margin-left: 110px">Đăng ký</button>
-                    </div>
+                    <!--<div class="p-3 mb-2 bg-info text-white" style="margin-top: 10px">-->
+                    <!--<h4>Đăng ký nhận tin khuyến mãi từ HomeCodeGym </h4>-->
+                    <!--<p>Đăng ký để nhận ưu đãi qua email, với mức giảm giá đến 70%.</p>-->
+                    <!--<div class="form-group">-->
+                    <!--<input type="email" class="form-control"-->
+                    <!--placeholder="name@example.com">-->
+                    <!--</div>-->
+                    <!--<button type="button" class="btn btn-light" style="margin-left: 110px">Đăng ký</button>-->
+                    <!--</div>-->
 
                 </div>
                 <!--row2-->
