--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,3 @@
-<!doctype html>
-
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home</title>
-</head>
-<body>
-
 <!--nav-bar-->
 <div class="container-fluid fixed-top">
     <nav class="navbar navbar-light" style="background-color: #ffffff; height: 115px">
@@ -96,55 +86,58 @@
                         <div class="card-header" style="color: red">
                             <h3>Tìm kiếm </h3>
                         </div>
-                        <div class="form-group" style="margin-left: 10px; margin-right: 10px">
-                            <label style="margin-left: 10px; margin-top: 15px">Tên chỗ nghỉ / điểm
-                                đến </label>
-                            <input type="text" class="form-control" placeholder="address">
-                        </div>
+                        <!--<div class="form-group" style="margin-left: 10px; margin-right: 10px">-->
+                        <!--<label style="margin-left: 10px; margin-top: 15px">Tên chỗ nghỉ / điểm-->
+                        <!--đến </label>-->
+                        <!--<input type="text" class="form-control" placeholder="address">-->
+                        <!--</div>-->
                         <div class="form-row" style="margin-top: 15px;margin-right: 10px;margin-left: 10px">
-                            <div class="form-group col-md-6">
-                                <label style="margin-left: 10px">Ngày nhận phòng </label>
-                                <input type="date" class="form-control">
-                            </div>
+                            <!--<div class="form-group col-md-6">-->
+                            <!--<label style="margin-left: 10px">Ngày nhận phòng </label>-->
+                            <!--<input type="date" class="form-control">-->
+                            <!--</div>-->
 
-                            <div class="form-group col-md-6">
-                                <label style="margin-left: 10px">Ngày trả phòng </label>
-                                <input type="date" class="form-control">
-                            </div>
+                            <!--<div class="form-group col-md-6">-->
+                            <!--<label style="margin-left: 10px">Ngày trả phòng </label>-->
+                            <!--<input type="date" class="form-control">-->
+                            <!--</div>-->
 
-                            <label style="margin-left: 10px">Số lượng phòng ngủ </label>
-                            <select class="form-control form-control-auto">
-                                <option>1 Phòng</option>
-                                <option>2 Phòng</option>
-                                <option>3 Phòng</option>
-                                <option>4 Phòng</option>
-                                <option>5 Phòng</option>
-                                <option>6 Phòng</option>
-                            </select>
-                            <label style="margin-left: 10px; margin-top: 10px">Số lượng phòng tắm </label>
-                            <select class="form-control form-control-auto">
-                                <option>1 Phòng</option>
-                                <option>2 Phòng</option>
-                                <option>3 Phòng</option>
-                            </select>
-                            <label style="margin-left: 10px; margin-top: 10px">Giá tiền</label>
-                            <select class="form-control form-control-auto" style="margin-bottom: 10px">
-                                <option>Từ 500-900 đồng</option>
-                                <option>Từ 950-1.200 đồng</option>
-                                <option>Từ 1.300-1.500 đồng</option>
-                                <option>Từ 1.600-1.900 đồng</option>
-                            </select>
-                            <br>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox">
-                                <label class="form-check-label">
-                                    Tôi đi công tác
-                                </label>
-                            </div>
+                            <!--<label style="margin-left: 10px">Số lượng phòng ngủ </label>-->
+                            <!--<select class="form-control form-control-auto">-->
+                            <!--<option>1 Phòng</option>-->
+                            <!--<option>2 Phòng</option>-->
+                            <!--<option>3 Phòng</option>-->
+                            <!--<option>4 Phòng</option>-->
+                            <!--<option>5 Phòng</option>-->
+                            <!--<option>6 Phòng</option>-->
+                            <!--</select>-->
+                            <!--<label style="margin-left: 10px; margin-top: 10px">Số lượng phòng tắm </label>-->
+                            <!--<select class="form-control form-control-auto">-->
+                            <!--<option>1 Phòng</option>-->
+                            <!--<option>2 Phòng</option>-->
+                            <!--<option>3 Phòng</option>-->
+                            <!--</select>-->
+                            <form>
+                                <label style="margin-left: 10px; margin-top: 10px">Giá tiền</label>
+                                <select class="form-control form-control-auto" style="margin-bottom: 10px"
+                                        name="keyword">
+                                    <option value="1">Từ 5 trăm - 1 triệu</option>
+                                    <option value="2">Từ 1 triệu - 1.5 triệu</option>
+                                    <option value="3">Từ 1.5 triệu - 2 triệu</option>
+                                    <option value="4">Từ 2 triệu - 2.5 triệu</option>
+                                </select>
+                                <br>
+                                <!--<div class="form-check">-->
+                                    <!--<input class="form-check-input" type="checkbox">-->
+                                    <!--<label class="form-check-label">-->
+                                        <!--Tôi đi công tác-->
+                                    <!--</label>-->
+                                <!--</div>-->
 
-                            <button type="submit" class="btn btn-primary"
-                                    style="margin-bottom: 15px; margin-top: 15px; margin-left: 140px">Tìm kiếm
-                            </button>
+                                <button type="submit" class="btn btn-primary"
+                                        style="margin-bottom: 15px; margin-top: 15px; margin-left: 140px">Tìm kiếm
+                                </button>
+                            </form>
                         </div>
                     </div>
                     <div>
@@ -515,6 +508,3 @@
     </footer>
     <!-- Footer -->
 </div>
-
-</body>
-</html>
