--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -22,7 +22,7 @@
                    role="button" aria-haspopup="true" aria-expanded="false">Tài khoản </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Đăng nhập </a>
-                    <a class="dropdown-item" href="#">Đăng ký </a>
+                    <a class="dropdown-item" [routerLink]="['/signup']">Đăng ký </a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="#">Cập nhật tài khoản </a>
                     <a class="dropdown-item" href="#">Thây đổi mật khẩu </a>
