--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -105,26 +105,40 @@
                             {{house?.price.toLocaleString() + 'VND ngày/đêm'}}
                         </div>
                         <div class="container">
-                            <form (ngSubmit)="onSubmit()" [formGroup]="addOrderForm">
+                            <form (ngSubmit)="onSubmit()" (change)="getTotalPrice()" [formGroup]="addOrderForm">
                                 <div class="form-group">
                                     <div class="form-row" style="margin-top: 15px">
                                         <div class="form-group col-md-6">
                                             <label>NGÀY ĐẾN </label>
                                             <input type="date" class="form-control" name="checkIn"
-                                                   formControlName="checkIn">
+                                                   formControlName="checkIn" [(ngModel)]="checkIn">
                                         </div>
                                         <div class="form-group col-md-6">
                                             <label>NGÀY ĐI </label>
                                             <input type="date" class="form-control" name="checkOut"
-                                                   formControlName="checkOut">
+                                                   formControlName="checkOut" [(ngModel)]="checkOut">
                                         </div>
                                     </div>
                                     <input type="hidden" name="house_id" formControlName="house_id"
                                            [(ngModel)]="house.id">
                                 </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Tổng: 0 usd</li>
-                                </ul>
+                                <div *ngIf="totalPrice;else total_price">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            Tổng: {{(totalPrice * house?.price).toLocaleString()}} VND
+                                        </li>
+                                    </ul>
+                                </div>
+                                <ng-template #total_price>
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">
+                                            Tổng: 0 VND
+                                        </li>
+                                    </ul>
+                                </ng-template>
+
+                                <!--<input type="hidden" name="totalPrice" formControlName="totalPrice"-->
+                                <!--[(ngModel)]="totalPrice * house.price">-->
                                 <div style="margin-left: 120px; margin-top: 20px; margin-bottom: 20px">
                                     <button type="submit" class="btn btn-danger">Đặt ngay</button>
                                 </div>
