--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                    role="button" aria-haspopup="true" aria-expanded="false">Tài khoản </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#">Đăng nhập </a>
-                    <a class="dropdown-item" href="#">Đăng ký </a>
+                    <a class="dropdown-item" [routerLink]="['/register']">Đăng ký </a>
                 </div>
             </li>
         </ul>
