--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -46,8 +46,8 @@
                         <div class="col-md-8 col-sm-6 col-xs-12">
                             <p>
                                 <img class="body" src="http://127.0.0.1:8000/storage/{{house?.image[0]}}"
-                                     height="520px"
-                                     width="738px">
+                                     height="355px"
+                                     width="100%">
                             </p>
 
                         </div>
@@ -55,12 +55,12 @@
 
                             <img class="card-img-top"
                                  src="http://127.0.0.1:8000/storage/{{house?.image[1]}}"
-                                 alt="Card image cap" style="width: 380px">
+                                 alt="Card image cap" style="width: 100%">
 
-                            <div style="margin-top: 15px">
+                            <div style="margin-top: 18px">
                                 <img class="card-img-top"
                                      src="http://127.0.0.1:8000/storage/{{house?.image[2]}}"
-                                     alt="Card image cap" style="width: 380px">
+                                     alt="Card image cap" style="width: 100%">
                             </div>
                         </div>
                         <!--end_img-->
