--- a/src/app/view-detail/view-detail.component.html
+++ b/src/app/view-detail/view-detail.component.html
@@ -47,7 +47,7 @@
                             <p>
                                 <img class="body" src="http://127.0.0.1:8000/storage/{{house?.image[0]}}"
                                      height="520px"
-                                     width="738px">
+                                     width="100%">
                             </p>
 
                         </div>
